<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2015 Jonas Kalderstam.

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="The drawer layout">

    <!-- The main content view -->
    <include
        layout="@layout/include_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- The navigation drawer -->
    <fragment
        android:id="@+id/navigation_drawer"
        android:name="com.nononsenseapps.notepad.fragments.NavigationDrawerFragment"
        android:layout_width="@dimen/navdrawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"/>

</android.support.v4.widget.DrawerLayout>