...
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="nononsense_notes" translatable="false">NoNonsense Notes</string>
    <string name="app_name">Notes</string>
    <string name="title_create">New note</string>
    <string name="timemachine">Time machine</string>
    <string name="time">Time</string>
    <string name="done">Done</string>
    <string name="saved">Saved</string>
    <string name="distance">Distance</string>
    <string name="need_location_help">Long press to set a location</string>
    <string name="near">Near</string>
    <string name="menu_save_and_add">Save and add note</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_deletelist">Delete list</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_share">Share</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_createnew">Create new</string>
    <string name="menu_createlist">Start new list</string>
    <string name="menu_clearcompleted">Clear completed</string>
    <string name="menu_setdefaultlist">Set as default list</string>
    <string name="new_default_set">New default set</string>
    <string name="menu_managelists">Edit list</string>
    <string name="add_item">Add item</string>
    <string name="delete_question">Delete?</string>
    <string name="delete_items_message">Are  you sure you want to delete these items?</string>
...
