...
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:minHeight="40dp"
        android:paddingRight="4dp"
        android:paddingLeft="@dimen/keyline_1"
        custom:enlargedView="@+id/checkbox" >

        <com.nononsenseapps.ui.NoteCheckBox
            android:id="@id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
...
        custom:titleFontFamily="robotolight"
        custom:titleFontStyle="bold"
        custom:titleRelativeSize="1.2"
        android:contentDescription="Item title"/>

    <com.nononsenseapps.ui.DateView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/text1"
        android:layout_toLeftOf="@+id/dragpadding"
        android:fontFamily="sans-serif-light"
        android:gravity="right"
...
